# tag-order

./: README.md  pyproject.toml  setup.py
tag_order/: hooks.py  modules.txt
tag_order/public/css/: tag_order.css
tag_order/tag_order/: api.py  notifications.py
tag_order/tag_order/doctype/tag_order/: tag_order.js  tag_order.json  tag_order.py
tag_order/tag_order/doctype/tag_order_settings/: tag_order_settings.json  tag_order_settings.py
tag_order/tag_order/doctype/tag_work_order/: tag_work_order.js  tag_work_order.json  tag_work_order.py
tag_order/tag_order/templates/: notification_base.html  status_cancelled.html  status_complete.html  status_in_review.html  status_printing.html  status_shipped.html
tag_order/tag_order/web_form/tag_order_form/: tag_order_form.json
tag_order/tag_order/workflow/: tag_order_workflow.json
tag_order/www/: tag-order-tracking.html  tag-order-tracking.py  tag_order_tracking.py  work-order.html  work-order.py  work_order.py
