[project]
name = "tag_order"
version = "0.0.1"
description = "Asset Tag Order Management for Centurisk"
authors = [
    {name = "Neil Fitzpatrick", email = "neil.fitzpatrick@centurisk.com"}
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bench]
frappe-dependencies = {frappe = ">=15.0.0"}
